data/forge_javadoc/1.7.10/raw/net/minecraft/world/gen/structure/StructureStrongholdPieces.Stronghold.md
---
title: "StructureStrongholdPieces.Stronghold"
description: "public abstract static class StructureStrongholdPieces.Stronghold extends StructureComponent"
package: "net/minecraft/world/gen/structure"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/world/gen/structure/StructureStrongholdPieces.Stronghold.html"
sourceType: javadoc
---

# StructureStrongholdPieces.Stronghold

**Inheritance:** java.lang.Object → net.minecraft.world.gen.structure.StructureComponent → net.minecraft.world.gen.structure.StructureStrongholdPieces.Stronghold

## Class signature

```java
public abstract static class StructureStrongholdPieces.Stronghold extends StructureComponent
```

## Constructors

- `Stronghold()`
- `Stronghold(int p_i2087_1_)`

## Methods

- `protected static boolean canStrongholdGoDeeper(StructureBoundingBox p_74991_0_)`
- `protected void func_143011_b(NBTTagCompound p_143011_1_)`
- `protected void func_143012_a(NBTTagCompound p_143012_1_)`
- `protected StructureComponent getNextComponentNormal(StructureStrongholdPieces.Stairs2 p_74986_1_, java.util.List p_74986_2_, java.util.Random p_74986_3_, int p_74986_4_, int p_74986_5_)`
- `protected StructureComponent getNextComponentX(StructureStrongholdPieces.Stairs2 p_74989_1_, java.util.List p_74989_2_, java.util.Random p_74989_3_, int p_74989_4_, int p_74989_5_)`
- `protected StructureComponent getNextComponentZ(StructureStrongholdPieces.Stairs2 p_74987_1_, java.util.List p_74987_2_, java.util.Random p_74987_3_, int p_74987_4_, int p_74987_5_)`
- `protected StructureStrongholdPieces.Stronghold.Door getRandomDoor(java.util.Random p_74988_1_)`
- `protected void placeDoor(World p_74990_1_, java.util.Random p_74990_2_, StructureBoundingBox p_74990_3_, StructureStrongholdPieces.Stronghold.Door p_74990_4_, int p_74990_5_, int p_74990_6_, int p_74990_7_)`

## Fields

- `protected StructureStrongholdPieces.Stronghold.Door field_143013_d`
